--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
       margin-bottom: 20px;
     }
   </style>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#4CAF50">
 </head>
 <body>
   <div class="container">
