--- a/index.html
+++ b/index.html
@@ -323,3 +323,11 @@
   </script>
 </body>
 </html>
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker
+      .register("/service-worker.js")
+      .then(() => console.log("Service Worker registrado com sucesso!"))
+      .catch(err => console.error("Falha ao registrar o Service Worker:", err));
+  }
+</script>
