--- a/index.html
+++ b/index.html
@@ -331,3 +331,17 @@
       .catch(err => console.error("Falha ao registrar o Service Worker:", err));
   }
 </script>
+<script>
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", () => {
+      navigator.serviceWorker.register("/sw.js").then(
+        (registration) => {
+          console.log("Service Worker registrado com sucesso:", registration.scope);
+        },
+        (err) => {
+          console.log("Falha ao registrar o Service Worker:", err);
+        }
+      );
+    });
+  }
+</script>
